Extensive refactoring of the code handling tag input; in particular, it now has a separate display and presenter. The code has been split into a separate package, and the common package has been removed. (CommonResources was moved to the root client package.)

--- a/src/com/prealpha/extempdb/client/core/core.css
+++ b/src/com/prealpha/extempdb/client/core/core.css
@@ -1,6 +1,6 @@
 /*
- * style.css
- * Copyright (C) 2010 Meyer Kizner
+ * core.css
+ * Copyright (C) 2011 Meyer Kizner
  * All rights reserved.
  */
 @external .gwt-Button, .gwt-Hyperlink;
